syntax = "proto3";

option csharp_namespace = "FairWearProductDataRetriever.Service.Protos";

// The Product service definition.
service ProductScrapperService {
    rpc GetProduct (ProductScrapperRequest) returns (ProductScrapperResponse);
}

// The request message containing the name of the upc code of the product.
message ProductScrapperRequest {
    string upcCode = 1;
}

// The response message containing product informations.
message ProductScrapperResponse {
    string upcCode = 1;
    string name = 2;
    string brandName = 3;
    string category = 4;
    repeated string ranges = 5;
}