syntax = "proto3";

option csharp_namespace = "FairWearProductDataRetriever.Service.Protos";

// The Product service definition.
service ProductService {
    rpc GetProduct (ProductRequest) returns (ProductResponse);
}

// The request message containing the name of the upc code of the product.
message ProductRequest {
    string upcCode = 1;
}

// The response message containing product informations.
message ProductResponse {
    string upcCode = 1;
    string name = 2;
    string brandName = 3;
    string category = 4;
    repeated string ranges = 5;
}